--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,6 +7,12 @@
 </ion-header>
 
 <ion-content>
+  <br>
+  <ion-label>Add Task</ion-label>
+  <ion-input type="text" placeholder="Add a new task"[(ngModel)]="newTask"></ion-input>
+  <ion-button (click)="addNewTask()">
+    Click me
+  </ion-button>
   <ion-list>
     <ion-item *ngFor="let toDoEntry of toDoList">
       {{ toDoEntry }}
