--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,13 +2,13 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="list-box"></ion-icon>
+      <ion-label>To-Do List</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>To-Do List</ion-label>
+      <ion-icon name="pie"></ion-icon>
+      <ion-label>Remote</ion-label>
     </ion-tab-button>
 
     <!-- <ion-tab-button tab="tab3">
