Routed news entries to detail pages. First load will cause errors. Reload page to fix.

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <br>
-  <ion-item *ngFor="let title of titles">
-    <ion-label>{{ title }}</ion-label>
+  <ion-item *ngFor="let title of titles; index as id">
+    <ion-label [routerLink] = "'/detail/' + id">{{ title }}</ion-label>
   </ion-item>
 </ion-content>
