--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,8 +7,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="pie"></ion-icon>
-      <ion-label>Remote</ion-label>
+      <ion-icon name="book"></ion-icon>
+      <ion-label>News</ion-label>
     </ion-tab-button>
 
     <!-- <ion-tab-button tab="tab3">
