--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-button (click)='goBack()'>
+    <ion-title>
+      <ion-button (click)='goBack()'>
       Back
     </ion-button>
-    <br>
-    <ion-title>{{ title }}</ion-title>
+  </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
+  <h1>{{ title }}</h1>
+  <br>
   <ion-img [src]="imageUrl"></ion-img>
+  <br>
   <p>{{ description }}</p>
 </ion-content>
